# python-test-app

./: README.md  __init__.py  pyproject.toml
core/: processing.py  processing_test.py
