[tool.poetry]
name = "python-test-app"
version = "0.1.0"
description = "Test App for understanding custom libraries and modules"
authors = ["mwilczek.net"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
# pythontestlib = {git = "git@github.mwilczek-net:mwilczek-net/python-test-lib.git", rev = "master"
numlib = {git = "git@github.mwilczek-net:mwilczek-net/python-test-lib.git", rev = "master", subdirectory = "numlib"}


[tool.poetry.group.dev.dependencies]
pytest = "8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
